--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     >
       <div class="container">
         <div style="display: flex; justify-content: space-between" class="areaApresentation">
-          <div style="z-index: 999; margin-right: 50px">
+          <div style="z-index: 999; margin-right: 50px" class="mobiler">
             <img
               src="./img/apresentacao.svg"
               alt="Apresentacao"
@@ -228,7 +228,7 @@
         
       </div>
     </div>
-    <div class="container-fluid" style="background-color:#000;height:auto;padding-bottom:100px;">
+    <div class="container-fluid areap" style="background-color:#000;height:auto;padding-bottom:100px;">
       <div class="container areaebook">
         
           <h2 style="text-align:center;font-weight:bold;color:#FF0C0C;margin-bottom:40px;" class="destaques">🔥 Destaques Imperdíveis do Curso 🔥</h2>
@@ -263,7 +263,7 @@
             <h4 style="color:#FF0C0C;font-weight:500;font-size:24px;">📚 Receitas Fit: Ebook Exclusivo</h4>
             <p style="font-size:20px;color:#fff;width:80%;margin:auto" class="textabout">Receba nosso ebook recheado com receitas deliciosas e saudáveis para complementar seu treino e manter a energia lá em cima. Não perca! 🍎🥗 </p>
           </div>
-          <div style="display:flex;margin:auto;margin-top:60px;">
+          <div style="display:flex;margin:auto;margin-top:60px;" class="btnebook">
             <a href="#planos" style="display:flex;margin:auto;margin-top:60px;"><button class="cta-button" style="margin:auto;">Receba Seu Ebook Agora!</button></a>
            </div>
       </div>
@@ -271,7 +271,7 @@
     <section class="margin_60_35" id="testimonials">
       <div class="container">
         <div class="row invertcol">
-          <div class="col-md-6">
+          <div class="col-md-6 colmobile">
             <h3>Flexibilidade para treinar onde e quando quiser</h3>
             <p class="lead">
               Com o HomeFit Start, você pode fazer as aulas da nossa plataforma onde quiser e na hora que quiser, usando seu computador, celular, tablet, notebook ou smart TV. Independente se você estiver viajando, de férias, no trabalho ou em casa.
@@ -356,7 +356,7 @@
     Não perca mais tempo 🕗<br><strong>Inscreva-se agora</strong> e comece a conquistar resultados incríveis hoje mesmo. 
   </p>
   <div style="display:flex;justify-content:center;">
-    <a href="#planos"><button class="cta-button">Aceito o desafio 🚀</button></a>
+    <a href="#planos"><button class="cta-button btndesafio">Aceito o desafio 🚀</button></a>
   </div>
 </div>
         </div>
@@ -561,8 +561,8 @@
    <footer>
     <div class="container">
       <div style="display:flex;justify-content:center;" class="footermobile">
-        <div>
-          <img src="./img/garantia.png" alt="garantia de 7 dias" style="width:100%;">
+        <div class="area7days">
+          <img src="./img/garantia.png" alt="garantia de 7 dias" style="width:100%;" class="img7dias">
         </div>
         <div>
           <p class="titleFooter">Sua transformação começa agora!
