--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <meta name="author" content="Franciele Sezana" />
     <meta property="og:title" content="SECATUDOEMCASA - Curso de Treino em Casa" />
     <meta property="og:description" content="Seu curso de treino em casa com diversos exercícios para iniciantes e ebook de receitas fit. Transforme seu corpo e saúde sem sair de casa." />
-    <meta property="og:image" content="./coming_soon/img/logo.png" />
-    <meta property="og:url" content="https://secatudoemcasa.com.br" />
+    <meta property="og:image" content="./coming_soon/img/capa.png" />
+    
+    <meta property="og:url" content="https://www.secatudoemcasa.com.br/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="SECATUDOEMCASA - Curso de Treino em Casa" />
     <meta name="twitter:description" content="Seu curso de treino em casa com diversos exercícios para iniciantes e ebook de receitas fit. Transforme seu corpo e saúde sem sair de casa." />
@@ -378,7 +379,7 @@
               <hr class="line">
 
               <div style="display:flex;justify-content:center;">
-                <a href="https://pay.hotmart.com/D94742460J?off=4u9xtphx&checkoutMode=10&_gl=1*11h853a*_gcl_aw*R0NMLjE3MjUxOTQ3NTcuQ2p3S0NBandvZEMyQmhBSEVpd0FFNjdoSlBBTEZJYjhnTHZtal80NGUwWHBzRXVCNHk4QVQyLWQwSks2YUUxbk5vQnk3dkE4ZHp0clVCb0NLdWtRQXZEX0J3RQ..*_gcl_au*MTkwNjgxNTc2OC4xNzI1MTk0NzU3LjE2NjE4MzY0OTIuMTcyNTMxMDM1Ni4xNzI1MzEwMzU2*_ga*MTIwNTUxNjY5LjE3MjUxOTQ3NTc.*_ga_GQH2V1F11Q*MTcyNTQ1NDkzOS42LjEuMTcyNTQ2MDE3Ny4xMS4wLjA.&bid=1725460195224&_hi=eyJjaWQiOiIxNzI1MTk0ODA4NTA4ODYyOTg5Mzc0ODk1MzA1MTAwIiwiYmlkIjoiMTcyNTE5NDgwODUwODg2Mjk4OTM3NDg5NTMwNTEwMCIsInNpZCI6IjYwOGU4MGFkOGJlYzQ3NDM4ZGZmM2ZiZDcyYjNlYzVhIn0=.1725460435275" target="_blank"><button class="cta-button btncard">
+                <a href="https://pay.hotmart.com/D94742460J?off=4u9xtphx&amp;checkoutMode=10&bid=1725575564085" target="_blank"><button class="cta-button btncard">
                   Assinar Agora 
                   <span class="arrow"><i class="fa-solid fa-arrow-right-long"></i></span>
               </button></a>
