--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <strong><br />Comece agora</strong> e veja
               <strong>resultados reais!</strong>
             </p>
-            <a href="#planos"><button class="cta-button">Quero Garantir Minha Vaga</button></a>
+            <a href="https://pay.hotmart.com/D94742460J?off=4u9xtphx&checkoutMode=10&bid=1725575564085"><button class="cta-button">BlackFriday R$21,90/mês</button></a>
           </div>
         </div>
         <!-- End sub_content -->
@@ -256,7 +256,7 @@
     Não perca mais tempo 🕗<br><strong>Inscreva-se agora</strong> e comece a conquistar resultados incríveis hoje mesmo. 
   </p>
   <div style="display:flex;justify-content:center;">
-    <a href="#planos"><button class="cta-button btndesafio">Aceito o desafio 🚀</button></a>
+    <a href="https://pay.hotmart.com/D94742460J?off=4u9xtphx&checkoutMode=10&bid=1725575564085"><button class="cta-button btndesafio">BLACKFRIDAY R$21,90/MêS</button></a>
   </div>
 </div>
         </div>
@@ -538,7 +538,7 @@
      <div style="display:flex;margin:auto;padding-bottom:30px;">
       
 
-      <a href="#planos" style="display:flex;margin:auto;padding-bottom:30px;"><button class="cta-button" style="margin:auto;">Inscreva-se Agora</button></a>
+      <a href="https://pay.hotmart.com/D94742460J?off=4u9xtphx&checkoutMode=10&bid=1725575564085" style="display:flex;margin:auto;padding-bottom:30px;"><button class="cta-button" style="margin:auto;">BLACKFRIDAY R$21,90/MêS</button></a>
      </div>
     </div>
   </div>
