--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <button class="close-btn" onclick="fecharBanner()" style="position: absolute; top: 10px; right: 10px; background: none; border: none; font-size: 20px; color: #fff; cursor: pointer;">✖</button>
         <h1 class="headline" style="font-size: 28px; font-weight: 700; margin-bottom: 10px;">🎉 VOCÊ GANHOU UM SUPER DESCONTO!</h1>
         <h2 class="subheadline" style="font-size: 24px; font-weight: 600; margin-bottom: 10px;">Aproveite 10% OFF no Curso SecaTudo!</h2>
-        <p class="discount-code" style="font-size: 20px; font-weight: bold; margin: 15px 0; background: #fff; color: #FF0C0C; display: inline-block; padding: 5px 15px; border-radius: 5px;">Use o código: <strong>SECATUDO10</strong></p>
+        <p class="discount-code" style="font-size: 20px; font-weight: bold; margin: 15px 0; background: #fff; color: #FF0C0C; display: inline-block; padding: 5px 15px; border-radius: 5px;">Use o cupom: <strong>SECATUDO10</strong></p>
         <p class="instructions" style="font-size: 16px; margin-bottom: 20px;">Insira no checkout e garanta sua economia agora mesmo!</p>
         <p class="price" style="font-size: 22px; font-weight: bold; margin-bottom: 15px;">Agora por apenas: <strong>R$32,89/mês</strong></p>
         <p class="cta" style="font-size: 16px; margin-bottom: 20px;">Oferta exclusiva por tempo limitado. Não perca!</p>
